<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userNameTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user_name_hint"
                android:inputType="text"
                android:textColor="@color/gray" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPasswordTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/gray" />
        </android.support.design.widget.TextInputLayout>

        <com.securegroup.githubapp.basecomponents.AntiMonkeyButton
            android:id="@+id/logInBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:textSize="@dimen/textsize"
            fancy:fb_borderColor="@color/gray"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/transparent"
            fancy:fb_focusColor="#5577bd"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/btn_log"
            fancy:fb_textColor="@color/gray"
            fancy:fb_textGravity="center_horizontal" />

    </LinearLayout>

</ScrollView>